# SciRooPlot

./: .clang-format  .gitignore  .plotrc  .plottingrc  .pre-commit-config.yaml  AliMultDepSpecPlottingFramework.cxx  AliMultDepSpecPlottingFramework.h  CMakeLists.txt  CPPLINT.cfg  CreatePlots.cxx  DoPlots.cxx  FrameworkHeader.h  Helpers_8cxx.html  Helpers_8cxx.js  Helpers_8cxx__incl.map  Helpers_8cxx__incl.md5  Helpers_8cxx_source.html  Helpers_8h.html  Helpers_8h.js  Helpers_8h__dep__incl.map  Helpers_8h__dep__incl.md5  Helpers_8h__incl.map  Helpers_8h__incl.md5  Helpers_8h_source.html  LinkDef.h  Logging_8h.html  Logging_8h.js  Logging_8h__dep__incl.map  Logging_8h__dep__incl.md5  Logging_8h__incl.map  Logging_8h__incl.md5  Logging_8h_source.html  Plot.cxx  Plot.h  PlotGenerator.cxx  PlotGenerator.h  PlotManager.cxx  PlotManager.h  PlotManager_8cxx.html  PlotManager_8cxx__incl.map  (+489 more)
.github/: CODEOWNERS
.github/workflows/: clang-format-check.yml  doxygen.yml  pre-commit.yml  side.yml  site.yml  slides.yml
app/: PlotApp.cpp  PlottingApp.cxx  PlottingAppConfig.cxx  SciRooPlotApp.cpp
app/MultDepSpec/: ConfigInput.cxx  CreatePlots.cxx  Datasets.cxx  Energies.cxx  Helpers.cxx  MultDepSpec.h  Publications.cxx  StyleDefinitions.cxx  Systems.cxx  Templates.cxx  Test.cxx  TrackQA.cxx
apps/: Configure.cxx  CreatePlots.cxx  CreatePlots.h  PlottingApp.cxx
apps/MultDepSpec/: ConfigInput.cxx  CreatePlots.cxx  Datasets.cxx  Energies.cxx  Helpers.cxx  MultDepSpec.h  Publications.cxx  StyleDefinitions.cxx  Systems.cxx  Test.cxx
cmake/: CompileFlags.cmake  PlottingFrameworkConfig.cmake  SciRooPlotConfig.cmake  SciRooPlotHelpers.cmake
doc/: CONTRIBUTORS.md  doxygen.conf
docs/: ADVANCED_INSTALL.md  DEPENDENCIES_INSTALL.md  INSTALL.md  README.md  _config.yml
docs/slides/: slides.typ
doxygen/: doxygen.conf
example/: CMakeLists.txt  CreatePlots.cxx  generateMWE.C
inc/: HelperFunctions.h  Helpers.h  Logging.h  Plot.h  PlotManager.h  PlotPainter.h  PlotStyle.h  PlottingFramework.h  PlottingTools.h
include/: Config.h  Helpers.h  Logging.h  Plot.h  PlotGenerator.h  PlotManager.h  PlotPainter.h  PlotStyle.h  PlottingFramework.h  PlottingTools.h  SciRooPlot.h
scripts/: fix_formatting.sh  generateTestFiles.C  install.sh  linter_check.sh  prepare_autocomplete.sh  scirooplot-env.sh.in
scripts/alidist/: README.md  scirooplot.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  (+66 more)
skeleton/: CMakeLists.txt  CreatePlots.cxx
src/: Config.cpp  CreatePlots.cxx  HelperFunctions.cxx  Helpers.cpp  Helpers.cxx  Plot.cpp  Plot.cxx  PlotGenerator.cxx  PlotManager.cpp  PlotManager.cxx  PlotPainter.cpp  PlotPainter.cxx  PlotStyle.cxx  PlottingApp.cxx  PlottingTools.cxx  PythonBindings.cpp  PythonBindings.cxx
tut/: CMakeLists.txt  Example.cxx
user/: CMakeLists.txt  DefinePlots.cpp  DefinePlots.cxx  DefinePlots.py
